# docs/swagger.json
@@ -90,7 +90,7 @@
                 }
             }
         },
-        "/problem-detail": {
+        "/problem/detail": {
             "get": {
                 "description": "获取问题详细信息",
                 "tags": [
@@ -115,7 +115,7 @@
                 }
             }
         },
-        "/problem-list": {
+        "/problem/list": {
             "get": {
                 "description": "获取问题列表",
                 "tags": [
